Fix horizontal overflow of body

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@ body {
   font-family: Verdana, sans-serif;
   font-size: calc(1.2rem + 0.2dvw);
   line-height: 1.5;
-  width: 100%;
 }
 header {
   display: flex;
@@ -27,6 +26,7 @@ nav > button {
   padding: 16px;
   width: 96px;
   background-color: lightblue;
+  text-align: center;
   &:hover {
     outline: 2px solid cyan;
   }
